ingress/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: entrada1.mydomain.com
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app-v1
            port:
              number: 8080  
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: api-server-svc
            port:
              number: 9090  
  - host: entrada2.mydomain.com
    http:
      paths:
      - path: /servicio1
        pathType: Prefix
        backend:
          service:
            name: app-v1
            port:
              number: 8080  
      - path: /servicio2
        pathType: Prefix
        backend:
          service:
            name: api-server-svc
            port:
              number: 9090
